[package]
name = "ripple"
version = "0.1.0"
edition = "2018"

[dependencies]
futures = "0.3.13"
futures-timer = "3.0.2"
anyhow = "1.0.40"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1.4.0"
features = ["full"]

[dependencies.crossterm]
version = "0.19.0"
features = ["event-stream"]

